Добавляет сетку блока категорий товаров и блока преимуществ

--- a/index.html
+++ b/index.html
@@ -182,32 +182,38 @@
             </section>
 
             <section class="advantages">
-                <h2 class="visually-hidden">Преимущества</h2>
-                <ul class="advantages-list">
-                    <li class="advantages-item">
-                        <h3 class="advantages-title title">Доставка</h3>
-                        <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж</p>
-                        <ol class="advantages-buttons-list">
-                            <li class="advantages-buttons-item">
-                                <button class="advantages-button advantages-button-current button" type="button">Доставка</button>
-                            </li>
-                            <li class="advantages-buttons-item">
-                                <button class="advantages-button button" type="button">Гарантия</button>
-                            </li>
-                            <li class="advantages-buttons-item">
-                                <button class="advantages-button button" type="button">Кредит</button>
-                            </li>
-                        </ol>
-                    </li>
-                    <li class="propeties-item">
-                        <h3 class="advantages-title title">Гарантия</h3>
-                        <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
-                    </li>
-                    <li class="propeties-item">
-                        <h3 class="advantages-title title">Кредит</h3>
-                        <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
-                    </li>
-                </ul>
+                <div class="advantages-wrapper">
+                    <h2 class="visually-hidden">Преимущества</h2>
+                    <ul class="advantages-list">
+                        <li class="advantages-item">
+                            <div class="advantages-item-wrapper">
+                                <h3 class="advantages-title title">Доставка</h3>
+                                <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж</p>
+                            </div>
+                            <div class="advantages-item-wrapper">
+                                <ol class="advantages-buttons-list">
+                                    <li class="advantages-buttons-item">
+                                        <button class="advantages-button advantages-button-current button" type="button">Доставка</button>
+                                    </li>
+                                    <li class="advantages-buttons-item">
+                                        <button class="advantages-button button" type="button">Гарантия</button>
+                                    </li>
+                                    <li class="advantages-buttons-item">
+                                        <button class="advantages-button button" type="button">Кредит</button>
+                                    </li>
+                                </ol>
+                            </div>
+                        </li>
+                        <li class="propeties-item">
+                            <h3 class="advantages-title title">Гарантия</h3>
+                            <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+                        </li>
+                        <li class="propeties-item">
+                            <h3 class="advantages-title title">Кредит</h3>
+                            <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+                        </li>
+                    </ul>
+                </div>
             </section>
 
             <section class="delivery-to-order">
