--- a/index.html
+++ b/index.html
@@ -221,39 +221,41 @@
                 <button class="delivery-to-order-button button" type="button">Доставим редкий товар под заказ</button>
             </section>
 
-            <section class="about-us">
-                <h2 class="about-us-title title">О нас</h2>
-                <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-                <p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
-                <ul class="delivery-company-list">
-                    <li class="delivery-company-item">
-                        <b>Меловые линии</b>
-                    </li>
-                    <li class="delivery-company-item">
-                        <b>СДИК</b>
-                    </li>
-                    <li class="delivery-company-item">
-                        <b>ТоксБерри</b>
-                    </li>
-                </ul>
-                <a class="about-us-link button" href="#">Подробнее о нас</a>
-            </section>
+            <div class="section-wrapper">
+                <section class="about-us">
+                    <h2 class="about-us-title title">О нас</h2>
+                    <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+                    <p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+                    <ul class="delivery-company-list">
+                        <li class="delivery-company-item">
+                            <b>Меловые линии</b>
+                        </li>
+                        <li class="delivery-company-item">
+                            <b>СДИК</b>
+                        </li>
+                        <li class="delivery-company-item">
+                            <b>ТоксБерри</b>
+                        </li>
+                    </ul>
+                    <a class="about-us-link button" href="#">Подробнее о нас</a>
+                </section>
 
-            <section class="contacts">
-                <h2 class="contacts-title title">Контакты</h2>
-                <p>Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки.</p>
-                <h3 class="contacts-title">Интернет-магазин «Девайс»</h3>
-                <address class="contacts-adress">
-                    <p class="contacts-address-place">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-                    <a class="contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-                </address>
-                <h3 class="contacts-title">Время работы</h3>
-                <ul class="contacts-schedule-list">
-                    <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
-                    <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
-                </ul>
-                <a class="contacts-link button" href="#">Напишите нам</a>
-            </section>
+                <section class="contacts">
+                    <h2 class="contacts-title-main title">Контакты</h2>
+                    <p>Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки.</p>
+                    <h3 class="contacts-title">Интернет-магазин «Девайс»</h3>
+                    <address class="contacts-adress">
+                        <p class="contacts-address-place">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+                        <a class="contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+                    </address>
+                    <h3 class="contacts-title">Время работы</h3>
+                    <ul class="contacts-schedule-list">
+                        <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
+                        <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
+                    </ul>
+                    <a class="contacts-link button" href="#">Напишите нам</a>
+                </section>
+            </div>
 
             <section class="subscribe">
                 <h2 class="subscribe-title title">Подпишитесь на рассылку</h2>
