--- a/index.html
+++ b/index.html
@@ -241,14 +241,14 @@
                 </section>
 
                 <section class="contacts">
-                    <h2 class="contacts-title-main title">Контакты</h2>
+                    <h2 class="contacts-title title">Контакты</h2>
                     <p>Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки.</p>
-                    <h3 class="contacts-title">Интернет-магазин «Девайс»</h3>
+                    <h3 class="contacts-title-sub">Интернет-магазин «Девайс»</h3>
                     <address class="contacts-adress">
                         <p class="contacts-address-place">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
                         <a class="contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
                     </address>
-                    <h3 class="contacts-title">Время работы</h3>
+                    <h3 class="contacts-title-sub">Время работы</h3>
                     <ul class="contacts-schedule-list">
                         <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
                         <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
@@ -258,68 +258,78 @@
             </div>
 
             <section class="subscribe">
-                <h2 class="subscribe-title title">Подпишитесь на рассылку</h2>
-                <p>Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
-                <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-                    <label class="visually-hidden" for="subscribe-email">Ваш e-mail</label>
-                    <input class="subscribe-email-field" id="subscribe-email" type="email" name="subscribe-email" placeholder="Ваш e-mail" required>
-                    <button class="subscribe-button button" type="button">Подписаться</button>
-                </form>
-                <p class="subscribe-its-free">Это бесплатно</p>
+                <div class="subscribe-wrapper">
+                    <h2 class="subscribe-title title">Подпишитесь на рассылку</h2>
+                    <p>Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+                    <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+                        <label class="visually-hidden" for="subscribe-email">Ваш e-mail</label>
+                        <input class="subscribe-email-field" id="subscribe-email" type="email" name="subscribe-email" placeholder="Ваш e-mail" required>
+                        <button class="subscribe-button button" type="button">Подписаться</button>
+                    </form>
+                    <p class="subscribe-its-free">Это бесплатно</p>
+                </div>
             </section>
         </main>
 
         <footer class="page-footer">
-            <section class="footer-contacts">
-                <h2 class="visually-hidden">Наши контакты</h2>
-                <a class="page-header-link">
-                    <img class="page-header-logo" src="./images/footer/footer-logo.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
-                </a>
-                <p class="footer-contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-            </section>
+            <div class="page-footer-container">
+                <div class="page-footer-wrapper-one">
+                    <section class="footer-contacts">
+                        <h2 class="visually-hidden">Наши контакты</h2>
+                        <a class="page-header-link">
+                            <img class="page-header-logo" src="./images/footer/footer-logo.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
+                        </a>
+                        <p class="footer-contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+                    </section>
+                </div>
 
-            <section class="footer-navigation">
-                <h2 class="visually-hidden">Навигация</h2>
-                <ul class="footer-navigation-list">
-                    <li class="footer-navigation-item">
-                        <a class="footer-navigation-link button" href="#">Доставка</a>
-                    </li>
-                    <li class="footer-navigation-item">
-                        <a class="footer-navigation-link button" href="#">Гарантия</a>
-                    </li>
-                    <li class="footer-navigation-item">
-                        <a class="footer-navigation-link button" href="#">Контакты</a>
-                    </li>
-                </ul>
-            </section>
+                <div class="page-footer-wrapper-two">
+                    <section class="footer-navigation">
+                        <h2 class="visually-hidden">Навигация</h2>
+                        <ul class="footer-navigation-list">
+                            <li class="footer-navigation-item">
+                                <a class="footer-navigation-link button" href="#">Доставка</a>
+                            </li>
+                            <li class="footer-navigation-item">
+                                <a class="footer-navigation-link button" href="#">Гарантия</a>
+                            </li>
+                            <li class="footer-navigation-item">
+                                <a class="footer-navigation-link button" href="#">Контакты</a>
+                            </li>
+                        </ul>
+                    </section>
 
-            <section class="footer-social">
-                <h2 class="visually-hidden">Мы в социальных сетях</h2>
-                <ul class="footer-social-list">
-                    <li class="footer-social-item">
-                        <a class="footer-social-link visually-hidden" href="#">Telegram</a>
-                    </li>
-                    <li class="footer-social-item">
-                        <a class="footer-social-link visually-hidden" href="#">YouTube</a>
-                    </li>
-                    <li class="footer-social-item">
-                        <a class="footer-social-link visually-hidden" href="#">Twitter</a>
-                    </li>
-                </ul>
-            </section>
+                    <section class="footer-social">
+                        <h2 class="visually-hidden">Мы в социальных сетях</h2>
+                        <ul class="footer-social-list">
+                            <li class="footer-social-item">
+                                <a class="footer-social-link visually-hidden" href="#">Telegram</a>
+                            </li>
+                            <li class="footer-social-item">
+                                <a class="footer-social-link visually-hidden" href="#">YouTube</a>
+                            </li>
+                            <li class="footer-social-item">
+                                <a class="footer-social-link visually-hidden" href="#">Twitter</a>
+                            </li>
+                        </ul>
+                    </section>
+                </div>
 
-            <section class="footer-phone">
-                <h2 class="visually-hidden">Наш телефон</h2>
-                <a class="footer-phone-number" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
-            </section>
+                <div class="page-footer-wrapper-three">
+                    <section class="footer-phone">
+                        <h2 class="visually-hidden">Наш телефон</h2>
+                        <a class="footer-phone-number" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+                    </section>
 
-            <section class="footer-htmlacademy">
-                <h2 class="visually-hidden">Сделано в HTML Academy</h2>
-                <a href="https://htmlacademy.ru/">
-                    <img src="./images/footer/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
-                    <span class="visually-hidden">.html academy</span>
-                </a>
-            </section>
+                    <section class="footer-htmlacademy">
+                        <h2 class="visually-hidden">Сделано в HTML Academy</h2>
+                        <a href="https://htmlacademy.ru/">
+                            <img src="./images/footer/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
+                            <span class="visually-hidden">.html academy</span>
+                        </a>
+                    </section>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
